--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/main.css">
 
-        <link rel="manifest" href="/manifest.json">
+        <link rel="manifest" href="manifest.json">
 
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
