add to home screen

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
         <div class="main-container">
             <div class="main wrapper clearfix">
+                <p>Tramite il menu' di chrome puoi fare "Add to home screen" e godere di piu'.</p>
             </div> <!-- #main -->
         </div> <!-- #main-container -->
 
