service workers hard life

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <nav>
                     <ul>
                         <li><a id="enable" href="#">enable</a></li>
+                        <li><a style="display: none" id="magic" href="#">reload</a></li>
                     </ul>
                 </nav>
             </header>
